добавив повідомлення про некоректне введення фільму у пошукову стрічку

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -53,6 +53,9 @@
             />
           </span>
         </div>
+        <span class="wrong-search visually-hidden">
+          Search result not successful. Enter the correct movie name and try again.
+        </span>
       </form>
       <!-- WATCHED/QUEUE BUTTONS -->
       <div class="button-container">
