--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -9,7 +9,7 @@ img {
 .modal {
   position: fixed;
   top: 20px;
-  left: 49.4%; 
+  left: 49.4%;
   transform: translateX(-50%);
   width: 280px;
   height: 958px;
@@ -18,24 +18,35 @@ img {
 }
 
 //Анна: добавила скролл модалке в мобильной версии
-.modal-wrap{
+.modal-wrap {
   max-height: calc(100vh - 100px);
   overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    margin-right: -10px;
+    width: 5px;
+    background-color: #f8f8f8;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #eeeeee;
+  }
 }
 @media screen and (min-width: 768px) {
   .modal {
-    top: 100px; // Анна: подняла модалку чуть выше
+    // top: 100px; // Анна: подняла модалку чуть выше
     width: 618px;
-    // height: 562px;
+    height: 562px;
     padding: 42px 28px 40px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .modal {
-    top: 100px;
+    // top: 100px;
     width: 882px;
-    // height: 568px;
+    height: 568px;
     padding: 50px 30px 40px;
   }
 }
@@ -57,10 +68,6 @@ img {
   cursor: pointer;
 }
 
-.modal__close-icon {
-  color: #000000;
-}
-
 @media screen and (min-width: 768px) {
   .modal-wrap {
     display: flex;
@@ -68,7 +75,7 @@ img {
 }
 
 .modal__poster-link {
-  width: 100%;
+  width: 240px;
   height: 356px;
   margin-bottom: 30px;
 
@@ -78,6 +85,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .modal__poster-link {
+    width: 264px;
     height: 374px;
     margin-bottom: 0;
     margin-right: 32px;
@@ -86,6 +94,7 @@ img {
 
 @media screen and (min-width: 1024px) {
   .modal__poster-link {
+    width: 396px;
     height: 478px;
     margin-right: 30px;
   }
@@ -198,7 +207,7 @@ img {
 
 @media screen and (min-width: 1024px) {
   .modal-buttons {
-    display: inline;
+    justify-content: start;
   }
 }
 
