--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -2,76 +2,80 @@ main {
   min-height: calc(100vh - 100px);
 }
 .wrap-container {
-    padding-bottom: 100px;
-    min-height: 100vh;
+  padding-bottom: 100px;
+  min-height: 100vh;
+}
+
+.footer {
+  // width: 100%;
+  // height: 100px;
+  padding: 30px 10px;
+  background-color: #f7f7f7;
+  color: #545454;
+  font-size: 14px;
+}
+
+.black-footer {
+  background-color: black;
+  padding: 30px 10px;
+  color: #545454;
+  font-size: 14px;
+  border-top: 1px solid #ff6b08;
+}
+
+.footer__container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+}
+.footer_container__authors {
+  margin-top: 10px;
+}
+.footer_container__authors__svg {
+  margin: 0 10px;
+  animation: beat 0.3s infinite alternate;
+  transform-origin: center;
+}
+
+@keyframes beat {
+  to {
+    transform: scale(1.5);
   }
-  
+}
+.footer_container__authors__link {
+  background-color: initial;
+  cursor: pointer;
+  text-decoration: underline;
+  color: #545454;
+  &:hover {
+    color: #ff6b08;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  main {
+    min-height: calc(100vh - 77px);
+  }
+
+  .wrap-container {
+    padding-bottom: 70px;
+  }
   .footer {
-    // width: 100%;
-    // height: 100px;
-    padding: 30px 10px;
-    background-color: #f7f7f7;
-    color: #545454;
-    font-size: 14px;
+    height: 77px;
+
+    font-size: 16px;
   }
   .footer__container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    flex-direction: column;
+    flex-direction: row;
   }
   .footer_container__authors {
-    margin-top: 10px;
-    
+    margin-top: 0;
+    margin-left: 4px;
   }
-  .footer_container__authors__svg {
-    margin: 0 10px;
-    animation: beat .30s 
-    infinite alternate;
-	transform-origin: center;
-   
-  }
-
-  @keyframes beat{
-	to { transform: scale(1.5); }
 }
-  .footer_container__authors__link {
-    background-color: initial;
-    cursor: pointer;
-    text-decoration: underline;
-    color: #545454;
-    &:hover {
-        color: #ff6b08;
-      }
-  }
-
-  @media screen and (min-width: 768px) {
-    main {
-      min-height: calc(100vh - 77px);
-    }
-
-    .wrap-container {
-      padding-bottom: 70px;
-    }
-    .footer {
-      height: 77px;
-  
-      font-size: 16px;
-    }
-    .footer__container {
-      flex-direction: row;
-    }
-    .footer_container__authors {
-      margin-top: 0;
-      margin-left: 4px;
-    }
-  }
-  
-
-
-
 
 // .svg-footer {
 //     fill: #FF4500;
