--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -50,6 +50,14 @@ main {
   font-size: 14px;
 }
 
+.black-footer {
+  background-color: black;
+  padding: 30px 10px;
+  color: #545454;
+  font-size: 14px;
+  border-top: 1px solid #ff6b08;
+}
+
 .footer__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -75,8 +83,8 @@ main {
 
 .footer_container__authors__svg {
   margin: 0 10px;
-  -webkit-animation: beat .30s  infinite alternate;
-          animation: beat .30s  infinite alternate;
+  -webkit-animation: beat 0.3s infinite alternate;
+          animation: beat 0.3s infinite alternate;
   -webkit-transform-origin: center;
           transform-origin: center;
 }
@@ -524,6 +532,10 @@ a {
   text-decoration: none;
 }
 
+.link:visited {
+  color: inherit;
+}
+
 .list {
   list-style-type: none;
 }
@@ -876,18 +888,29 @@ img {
   overflow-y: auto;
 }
 
+.modal-wrap::-webkit-scrollbar {
+  margin-right: -10px;
+  width: 5px;
+  background-color: #f8f8f8;
+}
+
+.modal-wrap::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #eeeeee;
+}
+
 @media screen and (min-width: 768px) {
   .modal {
-    top: 100px;
     width: 618px;
+    height: 562px;
     padding: 42px 28px 40px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .modal {
-    top: 100px;
     width: 882px;
+    height: 568px;
     padding: 50px 30px 40px;
   }
 }
@@ -907,10 +930,6 @@ img {
   cursor: pointer;
 }
 
-.modal__close-icon {
-  color: #000000;
-}
-
 @media screen and (min-width: 768px) {
   .modal-wrap {
     display: -webkit-box;
@@ -920,7 +939,7 @@ img {
 }
 
 .modal__poster-link {
-  width: 100%;
+  width: 240px;
   height: 356px;
   margin-bottom: 30px;
   -o-object-fit: cover;
@@ -930,6 +949,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .modal__poster-link {
+    width: 264px;
     height: 374px;
     margin-bottom: 0;
     margin-right: 32px;
@@ -938,6 +958,7 @@ img {
 
 @media screen and (min-width: 1024px) {
   .modal__poster-link {
+    width: 396px;
     height: 478px;
     margin-right: 30px;
   }
@@ -1053,7 +1074,9 @@ img {
 
 @media screen and (min-width: 1024px) {
   .modal-buttons {
-    display: inline;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
   }
 }
 
