--- a/src/sass/components/_footer_modal_students.scss
+++ b/src/sass/components/_footer_modal_students.scss
@@ -22,11 +22,11 @@
 .footer-modal {
   position: fixed;
   top: 50px;
-  left: 50%; 
+  left: 50%;
   transform: translateX(-50%);
 }
 
-.modal-close-btn{
+.modal-close-btn {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -42,22 +42,22 @@
   box-sizing: border-box;
 }
 .modal__content__footer {
-    padding: 40px 10px;
-    text-align: center;
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    height: 600px;
-//     background-color: white;
-    overflow-y: scroll;
+  padding: 40px 10px;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  height: 600px;
+  //     background-color: white;
+  overflow-y: scroll;
 }
 
 .students-list {
   display: grid;
   width: 100%;
-  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-row-gap: 15px;
   grid-column-gap: 40px;
-  
+
   &__item {
     width: 160px;
     height: 210px;
@@ -68,11 +68,8 @@
       height: 160px;
       margin: 0 auto;
       border-radius: 50%;
-      box-shadow: 
-            0px 1px 3px rgba(0, 0, 0, 0.12),
-            0px 1px 1px rgba(0, 0, 0, 0.14), 
-            0px 2px 1px rgba(0, 0, 0, 0.2);
-      
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
     }
     &__descr {
       width: 100%;
@@ -80,6 +77,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      background-color: #fff;
+      color: black;
       &__link {
         display: block;
         margin-left: 4px;
@@ -98,9 +97,9 @@
   }
 }
 @media screen and (max-width: 767px) {
-  .students-list{
-  display: block;
-}
+  .students-list {
+    display: block;
+  }
 }
 @media screen and (max-width: 768px) {
   .students-list__item:not(:last-child) {
@@ -125,15 +124,13 @@
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-
-  .students-list{
+  .students-list {
     display: grid;
     // width: 100%;
     padding: 0 5px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-row-gap: 5px;
     grid-column-gap: 10px;
-    
   }
   .students-list__item {
     width: 160px;
@@ -144,10 +141,3 @@
     height: 160px;
   }
 }
-
-
-
-
-
- 
-  
