--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -1,18 +1,14 @@
-// body.show-modal {
-//   overflow: hidden;
-// }
-
 img {
   display: block;
 }
 
 .modal {
   position: fixed;
-  top: 20px;
-  left: 49.4%;
-  transform: translateX(-50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 280px;
-  height: 958px;
+  // height: 958px;
   padding: 48px 20px 40px 20px;
   background-color: #ffffff;
 }
