--- a/src/sass/components/_footer_modal_students.scss
+++ b/src/sass/components/_footer_modal_students.scss
@@ -21,9 +21,9 @@
 }
 .footer-modal {
   position: fixed;
-  top: 50px;
-  left: 50%; 
-  transform: translateX(-50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
 }
 
 .modal-close-btn{
@@ -72,7 +72,10 @@
             0px 1px 3px rgba(0, 0, 0, 0.12),
             0px 1px 1px rgba(0, 0, 0, 0.14), 
             0px 2px 1px rgba(0, 0, 0, 0.2);
-      
+        &:hover{
+          animation: tada; 
+          animation-duration: 2s; 
+            }
     }
     &__descr {
       width: 100%;
@@ -89,9 +92,10 @@
         background-image: url('https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png');
         background-position: center;
         background-size: contain;
+        transition: transform 0.4s ease;
 
         &:hover {
-          transform: scale(1.1);
+          transform: scale(1) translateY(-3px);
         }
       }
     }
