--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,9 +1,6 @@
-@import './base/common';
-@import './layout/footer';
-@import './layout/header-search';
-@import './layout/logo';
-
+@import 'animate.css';
 // BASE
+@import './base/common';
 @import './base/container';
 @import './base/reset-styles';
 @import './base/section';
@@ -26,3 +23,6 @@
 
 // UTILS
 @import './utils/variables';
+@import './layout/footer';
+@import './layout/header-search';
+@import './layout/logo';
