коррекция пропорций фотографий

--- a/src/sass/components/_footer_modal_students.scss
+++ b/src/sass/components/_footer_modal_students.scss
@@ -147,5 +147,6 @@
   .students-list__item__image {
     width: 160px;
     height: 160px;
+    object-fit: cover; // Саша - коррекция пропорций фотографий
   }
 }
